# IntraJSCAM2021

./: .gitattributes  .gitignore  README.md  REUSABILITY.md  build.gradle  compile_all.sh  eval.sh  settings.gradle
Docker/: Dockerfile
evaluation/: Correctness.htm  Results.htm  Results.xlsx  plots.py  run_eval.sh
evaluation/Correctness.fld/: filelist.xml  sheet001.htm  sheet002.htm  sheet003.htm  sheet004.htm  sheet005.htm  stylesheet.css  tabstrip.htm
evaluation/Results.fld/: filelist.xml  sheet001.htm  sheet002.htm  sheet003.htm  sheet004.htm  sheet005.htm  stylesheet.css  tabstrip.htm
evaluation/antlr-2.7.2/: Makefile  aclocal.m4  build.gradle  configure.in  java_deps
evaluation/antlr-2.7.2/antlr/: DefaultToolErrorHandler.java  MakeGrammar.java
evaluation/antlr-2.7.2/doc/: cpp-runtime.html  err.html  inheritance.html  lexer.html  metalang.html  streams.html  trees.html  vocab.html
evaluation/antlr-2.7.2/examples/cpp/ASTsupport/: Makefile
evaluation/antlr-2.7.2/examples/cpp/columns/: Makefile
evaluation/antlr-2.7.2/examples/cpp/filter/: Test.cpp
evaluation/antlr-2.7.2/examples/cpp/heteroAST/: Main.cpp
evaluation/antlr-2.7.2/examples/cpp/java/: java.g  java.tree.g
evaluation/antlr-2.7.2/examples/cpp/lexRewrite/: Makefile
evaluation/antlr-2.7.2/examples/cpp/multiParser/: Main.cpp
evaluation/antlr-2.7.2/examples/cpp/parseBinary/: Makefile
evaluation/antlr-2.7.2/examples/cpp/preserveWhiteSpace/: Main.cpp  Makefile
evaluation/antlr-2.7.2/examples/cpp/transform/: Main.cpp
evaluation/antlr-2.7.2/examples/cpp/treewalk/: Main.cpp
evaluation/antlr-2.7.2/examples/java/java/: shiplist
evaluation/antlr-2.7.2/lib/cpp/antlr/: ANTLRException.hpp  ANTLRUtil.hpp  ASTArray.hpp  BitSet.hpp  CharScanner.hpp  CharStreamException.hpp  CommonASTWithHiddenTokens.hpp  IOException.hpp  MismatchedTokenException.hpp  RefCount.hpp  TokenBuffer.hpp  TreeParser.hpp
evaluation/antlr-2.7.2/lib/cpp/src/: ASTFactory.cpp  NoViableAltException.cpp
evaluation/antlr-2.7.2/lib/csharp/src/antlr/: CharScanner.cs  CharStreamIOException.cs  RecognitionException.cs  TokenStreamException.cs
evaluation/antlr-2.7.2/scripts/: Config.make  Rules.make  run-antlr.in
evaluation/fop-0.95/: build.gradle
evaluation/jastaddj-intraflow/: .project  README.md  build.properties  build.xml  jjcfg.test
evaluation/jastaddj-intraflow/jastaddj/: .project
evaluation/jastaddj-intraflow/src/jastadd/: DotGraphSpec.jrag  Helpers.jrag
evaluation/jfreechart-1.0.0/: build.gradle
evaluation/sonarqube_bl/conf/: sonar.properties
evaluation/sonarqube_bl/data/: sonar.mv.db
evaluation/sonarqube_bl/temp/: sharedmemory
evaluation/sonarqube_bl/web/css/: main.5dfd9ce9.css
evaluation/sonarqube_bl/web/js/: 0.1619792615098.chunk.js  1.1619792615098.chunk.js  10.1619792615098.chunk.js  10.1619792615098.chunk.js.map  10.m.5251fb5a.chunk.js.map  (+310 more)
evaluation/sonarqube_dda/web/: index.html
evaluation/sonarqube_npa/conf/: wrapper.conf
evaluation/sonarqube_npa/temp/: sharedmemory
resources/: requirements.txt
src/jastadd/DataFlow/: Analysis.jrag  NullAnalysis.jrag
(+1892 files in other folders)
